syntax = "proto3";

package calculator;

option go_package = "github.com/Clement-Jean/grpc-go-course/calculator/proto";

message PrimesRequest {
  int32 input = 1;
}

message PrimesResponse {
  int32 factor = 1;
}

service PrimesService {
  rpc Primes (PrimesRequest) returns (stream PrimesResponse);
}

