syntax = "proto3";

package sum;

option go_package = "github.com/Clement-Jean/grpc-go-course/calculator/proto";

message SumRequest {
  int32 a = 1;
  int32 b = 2;
}

message SumResponse {
  int32 sum = 1;
}

service SumService {
  rpc Sum (SumRequest) returns (SumResponse);
}
